tests/i_replicate_neg.out
Interpreter error: Bad type for argument of "replicate": expected int, but got bool (true) at line 4, column 12