tests/i_replicate_neg.fo
fun bool writeBool(bool b) = write(b)

fun [bool] main() =
  let fs = replicate(true, false) in
  map(writeBool, fs)
